Go live update 1

--- a/app/auth/templates/auth/user_register.html
+++ b/app/auth/templates/auth/user_register.html
@@ -2284,7 +2284,7 @@
                         </div> 
                             <h4>
                                 <div>Welcome,</div>
-                                <span>ID: <span class="text-success">EMPXXXX</span></span> <br />
+                                <!-- <span>ID: <span class="text-success">EMPXXXX</span></span> <br /> -->
                                 <span>After account created, wait for <span class="text-success">admin approval</span></span>
                             </h4>
                             <div>
