--- a/prime_admin/templates/lms/deposit_modal.html
+++ b/prime_admin/templates/lms/deposit_modal.html
@@ -86,8 +86,8 @@
                                             <option value="Sales">
                                                 Sales
                                             </option>
-                                            <option value="Student Payment">
-                                                Student Payment
+                                            <option value="Student Loan Payment">
+                                                Student Loan Payment
                                             </option>
                                         </select>
                                         <div class="valid-feedback">
@@ -103,8 +103,8 @@
                             <div class="form-row">
                                 <div class="col-md-6">
                                     <div class="position-relative form-group"><label for="by_who"
-                                            class="">By Who</label><input readonly name="by_who" id="by_who"
-                                            type="text" class="form-control" value="{{current_user.full_name}}" required>
+                                            class="">By Who</label><input name="by_who" id="by_who"
+                                            type="text" class="form-control" required>
                                             </div>
                                 </div>
                             </div>
