--- a/prime_admin/templates/lms/withdraw_modal.html
+++ b/prime_admin/templates/lms/withdraw_modal.html
@@ -126,7 +126,7 @@
                                 <div class="col-md-6">
                                     <div class="position-relative form-group"><label for="by_who"
                                             class="">By Who</label><input name="by_who" id="by_who"
-                                            type="text" class="form-control" value="{{current_user.full_name}}" readonly>
+                                            type="text" class="form-control">
                                             </div>
                                 </div>
                             </div>
