--- a/prime_admin/templates/lms/cash_flow.html
+++ b/prime_admin/templates/lms/cash_flow.html
@@ -289,9 +289,42 @@
         </div>
         {% endif %}
 
-            <h5>Statement</h5>
+            <h5>Sales Statement</h5>
             <div class="table-responsive">
                 <table id="tbl_statement" class="align-middle mb-0 table table-bordered table-striped table-hover">
+                    <thead>
+                        <tr>
+                            {% for column in TABLE_OPTIONS['table_columns'] %}
+                            <th class="text-center">{{ column.upper() }}</th>
+                            {% endfor %}
+                        </tr>
+                    </thead>
+                    <tbody>
+
+                        {% for row_data in TABLE_OPTIONS['table_data'] %}
+                 
+                        <tr class="item row_object" id="{{row_data[0]}}">
+                            {% for value in row_data %}
+
+                            <td class="text-center">
+                                {% if value == none %}
+                                <!-- pass -->
+                                {% else %}
+                                {{value}}
+                                {% endif %}
+                            </td>
+
+                            {% endfor %}
+                        </tr>
+                        {% endfor %}
+
+                    </tbody>
+                </table>
+            </div>
+
+            <h5 style="margin-top: 20px;">Fund 1 & 2 Statement</h5>
+            <div class="table-responsive">
+                <table id="tbl_fund_statement" class="align-middle mb-0 table table-bordered table-striped table-hover">
                     <thead>
                         <tr>
                             {% for column in TABLE_OPTIONS['table_columns'] %}
