--- a/app/admin/templates/admin/admin_dashboard.html
+++ b/app/admin/templates/admin/admin_dashboard.html
@@ -28,7 +28,8 @@
                     <table id="tbl_user_status" class="align-middle mb-0 table table-borderless table-striped table-hover">
                         <thead>
                         <tr>
-                            <th class="text-center">ID</th>
+                            <th class="text-center">SYSTEM ID</th>
+                            <th class="text-center">EMPLOYEE ID</th>
                             <th>Name</th>
                             <th class="text-center">Position</th>
                             <th class="text-center">Status</th>
