Go live update 3

--- a/prime_admin/templates/lms/members_table.html
+++ b/prime_admin/templates/lms/members_table.html
@@ -10,6 +10,7 @@
     PDF_URL = "{{url_for('lms.print_students_pdf')}}";
     STUDENT_INFO_PDF_URL = "{{url_for('lms.print_student_info')}}";
     STUDENTS_AUDIT_PDF_URL = "{{url_for('lms.print_students_pdf')}}";
+    ROLE = "{{current_user.role.name}}";
 </script>
 <style>
     .modal-dialog {
