--- a/prime_admin/templates/lms/orientation_attendance.html
+++ b/prime_admin/templates/lms/orientation_attendance.html
@@ -149,7 +149,7 @@
                         <input id="referred_by" name="referred_by" type="hidden"
                                     class="form-control">
                         <div class="position-relative form-group">
-                            <label for="referred_by_name" class="">Referred By (Optional)</label>
+                            <label for="referred_by_name" class="">Referred By Student (Optional)</label>
                             <div class="input-group"><input id="referred_by_name" name="referred_by_name" type="text"
                                     class="form-control" readonly>
                                 <div class="input-group-append">
