--- a/prime_admin/templates/lms/student_pdf.html
+++ b/prime_admin/templates/lms/student_pdf.html
@@ -50,16 +50,16 @@
   <div style="text-align: center;">
     <h3 style="margin-bottom: 5px;">PRIME LANGUAGE AND TECH. CENTER INC.</h3>
     <h6 style="font-weight:lighter;margin-top: 5px;">SEC. REG. NO.: CS201817522</h6>
-    <h5 style="font-weight:bold;margin-top: 10px;">STUDENTS RECORD</h5>
+    <h5 style="font-weight:bold;margin-top: 10px;">IMPORTANT STUDENTS RECORD</h5>
   </div>
 
   <div style="text-align: center;">
-    <h6 style="font-weight:lighter;margin: 5px;">BATCH NO.: {{batch_no}}</h6>
-    <h6 style="font-weight:lighter;margin: 5px;">SCHEDULE: {{schedule}}</h6>
     <h6 style="font-weight:lighter;margin: 5px;margin-bottom: 20px;">{{branch}} {% if branch == "ALL" %}BRANCHES{% else %}BRANCH{% endif %}</h6>
+    <h6 style="font-weight:lighter;margin: 5px;">BATCH NO.: {{batch_no}}</h6>
+    <h6 style="font-weight:lighter;margin: 5px;margin-bottom: 20px;">SCHEDULE: {{schedule}}</h6>
   </div>
 
-  <div class="Row">
+  <!-- <div class="Row">
     <div class="Column">TOTAL OF INSTALLMENT: ₱{{total_installment}}</div>
     <div class="Column">TOTAL OF FULL PAYMENT: ₱{{total_full_payment}}</div>
     <div class="Column">TOTAL OF PREMIUM PAYMENT: ₱{{total_premium_payment}}</div>
@@ -68,8 +68,7 @@
   <div class="Row" style="margin-bottom: 15px;">
     <div class="Column">TOTAL: ₱{{total_payment}}</div>
     <div class="Column">BALANCE: ₱{{total_balance}}</div>
-  </div>
-
+  </div> -->
 
   <table>
     <tr>
