Go live update 5

--- a/prime_admin/templates/lms/client_edit_modal.html
+++ b/prime_admin/templates/lms/client_edit_modal.html
@@ -95,7 +95,7 @@
                                     <div class="position-relative form-group">
                                         <div>
                                             <div class="custom-checkbox custom-control">
-                                                <input disabled name="chkbox_upgrade" type="checkbox" id="chkbox_upgrade" class="custom-control-input">
+                                                <input name="chkbox_upgrade" type="checkbox" id="chkbox_upgrade" class="custom-control-input">
                                                 <label class="custom-control-label" for="chkbox_upgrade"><strong>UPGRADE TO PREMIUM PAYMENT</strong></label></div>
                                         </div>
                                     </div>
