feat: Add edit of students in orientation and favicon

--- a/app/admin/templates/admin/admin_base.html
+++ b/app/admin/templates/admin/admin_base.html
@@ -25,7 +25,7 @@
     {% block default_head %}
     <link href="{{ url_for('bp_admin.static', filename='css/lib/main.css') }}" rel="stylesheet">
     <link href="{{ url_for('bp_admin.static', filename='css/homebest.css') }}" rel="stylesheet">
-    <!-- <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}"> -->
+    <link rel="shortcut icon" href="{{ url_for('bp_admin.static', filename='img/favicon.ico') }}">
     <link href="{{ url_for('bp_admin.static', filename='DataTables/datatables.css') }}" rel="stylesheet">
     <link href="{{ url_for('bp_admin.static', filename='DataTables/dataTables.checkboxes.css') }}" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.1/css/toastr.css" rel="stylesheet"/>
