--- a/prime_admin/templates/lms/members_table.html
+++ b/prime_admin/templates/lms/members_table.html
@@ -124,8 +124,8 @@
                                 <div class="widget-subheading"></div>
                             </div>
                             <div class="widget-content-right">
-                                <!-- <div class="widget-numbers text-success"><span id="sales_today">₱ 0.00</span></div> -->
-                                <div class="widget-numbers text-danger"><span>Ongoing Maintenance</span></div>
+                                <div class="widget-numbers text-success"><span id="sales_today">₱ 0.00</span></div>
+                                <!-- <div class="widget-numbers text-danger"><span>Ongoing Maintenance</span></div> -->
                             </div>
                         </div>
                     </div>
