feat: Add promo

--- a/prime_admin/templates/lms/registration.html
+++ b/prime_admin/templates/lms/registration.html
@@ -271,6 +271,20 @@
                     </div>
      
                     <div class="col-md-3">
+                        <div class="position-relative form-group">
+                            <label for="payment_modes" class="">Promo</label>
+                            <div>
+                                <div class="custom-radio custom-control"><input required type="radio" id="full_payment_promo" name="payment_modes" value="full_payment_promo" class="custom-control-input"><label class="custom-control-label" for="full_payment_promo">
+                                    Full Payment - Promo (5500)
+                                </label></div>
+                                <div class="custom-radio custom-control"><input required type="radio" id="installment_promo" name="payment_modes" value="installment_promo" class="custom-control-input"><label class="custom-control-label" for="installment_promo">
+                                    Installment - Promo (6300)
+                                </label></div>
+                                <div class="custom-radio custom-control"><input required type="radio" id="premium_promo" name="payment_modes" value="premium_promo" class="custom-control-input"><label class="custom-control-label" for="premium_promo">
+                                    Premium Payment - Promo (7000)
+                                </label></div>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="col-md-3">
