fix: pdf email font size

--- a/prime_admin/templates/lms/student_pdf.html
+++ b/prime_admin/templates/lms/student_pdf.html
@@ -23,7 +23,7 @@
 
     @page {
       size: letter landscape;
-      margin: 2cm;
+      margin: .5cm;
     }
 
     .Row {
@@ -100,7 +100,7 @@
       <td>
         {{student[26]}}
       </td>
-      <td>
+      <td style="font-size: 9px;">
         {{student[27]}}
       </td>
       <td>
